--- a/static/app.html
+++ b/static/app.html
@@ -2,62 +2,69 @@
 <html lang="ja">
 
 <head>
-    <meta charset="UTF-8" />
-    <title>ASL Predictor with Skeleton</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <title>ASL Predictor with Skeleton</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- TensorFlow.js + Hand Pose Detection -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/hand-pose-detection"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/pose-detection"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
+  <!-- TensorFlow.js + Hand Pose Detection -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/hand-pose-detection"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/pose-detection"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
 </head>
 
-<body>
-    <nav class="mb-6 w-full max-w-6xl">
-        <ul class="flex py-4 border-b p-4 bg-white shadow-lg rounded-lg">
-            <li><a href="/" class="text-blue-600 hover:underline mr-4">Home</a></li>
-            <li><a href="/app" class="text-blue-600 hover:underline mr-4">Camera App</a></li>
-            <li><a href="/test" class="text-blue-600 hover:underline">Image Upload Test</a></li>
-        </ul>
-    </nav>
-    <main class="flex flex-col items-center justify-center bg-gray-100 p-4 space-y-6">
+<body class="bg-gray-100">
+  <!-- ナビゲーション -->
+  <nav class="mb-6 w-full max-w-6xl mx-auto">
+    <ul class="flex py-4 border-b p-4 bg-white shadow-lg rounded-lg">
+      <li><a href="/" class="text-blue-600 hover:underline mr-4">Home</a></li>
+      <li><a href="/app" class="text-blue-600 hover:underline mr-4">Camera App</a></li>
+      <li><a href="/test" class="text-blue-600 hover:underline">Image Upload Test</a></li>
+    </ul>
+  </nav>
 
-        <!-- 右カラム（カメラ映像 + ボタン） -->
-        <div class="">
-            <div class="relative inline-block">
-                <!-- カメラ映像 -->
-                <video id="webcam" autoplay playsinline muted class="block"></video>
-                <!-- 骨格描画 -->
-                <canvas id="outputCanvas" class="absolute top-0 left-0 pointer-events-none"></canvas>
+  <!-- メイン -->
+  <main class="flex flex-col items-center justify-center bg-gray-100 p-4 space-y-6">
 
-                <!-- 推論結果パネル -->
-                <div id="inference"
-                    class="absolute top-0 right-0 m-4 p-4 bg-white bg-opacity-75 rounded shadow-lg z-50">
-                    <div id="result" class="text-sm font-mono text-gray-800 w-full">
-                        <p class="text-2xl font-bold text-center">
-                            <span id="res-class" class="text-5xl"></span>
-                        </p>
-                        <img id="res-image" src="" alt="Uploaded hand"
-                            class="mt-4 border rounded shadow w-full max-w-[100px] hidden mx-auto">
-                    </div>
-                </div>
-            </div>
+    <!-- カメラ表示 -->
+    <div class="relative inline-block">
+      <video id="webcam" autoplay playsinline muted class="block rounded shadow-lg"></video>
+      <canvas id="outputCanvas" class="absolute top-0 left-0 pointer-events-none"></canvas>
 
-            <!-- 送信ボタン -->
-            <button id="sendBtn" class="w-full max-w-[300px] px-4 py-2 bg-gray-500 text-white rounded">
-                📤 Send Hand to Server
-            </button>
-
+      <!-- 推論結果パネル -->
+      <div id="inference"
+        class="absolute top-0 right-0 m-4 p-4 bg-white bg-opacity-75 rounded shadow-lg z-50">
+        <div id="result" class="text-sm font-mono text-gray-800 w-full">
+          <p class="text-2xl font-bold text-center">
+            <span id="res-class" class="text-5xl"></span>
+          </p>
+          <img id="res-image" src="" alt="Uploaded hand"
+            class="mt-4 border rounded shadow w-full max-w-[100px] hidden mx-auto">
         </div>
+      </div>
+    </div>
 
-        </div>
-    </main>
+    <!-- 送信ボタン -->
+    <button id="sendBtn"
+      class="w-full max-w-[300px] px-4 py-2 bg-gray-500 text-white rounded disabled:opacity-50">
+      📤 Send Frame to Server
+    </button>
+  </main>
 
-    <!-- 外部JS -->
-    <script type="module" src="/static/js/app.js"></script>
+  <!-- ============================== -->
+  <!-- 🌀 ローディングモーダル -->
+  <!-- ============================== -->
+  <div id="loadingModal"
+    class="fixed inset-0 bg-gray-900 bg-opacity-70 flex flex-col items-center justify-center z-[9999] transition-opacity duration-500">
+    <div
+      class="w-16 h-16 border-4 border-white border-t-transparent rounded-full animate-spin mb-6">
+    </div>
+    <p class="text-white text-lg font-semibold tracking-wide">Loading models... please wait</p>
+  </div>
+
+  <!-- 外部JS -->
+  <script type="module" src="/static/js/app.js"></script>
 </body>
-
 </html>
